--- a/src/index.css
+++ b/src/index.css
@@ -1106,7 +1106,7 @@ hr {
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-  width: 760px;
+  /* width: 760px; */
   max-width: 100%
 }
 
